WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307500
[JSC] Fix RefCast / RefTest folding in B3
https://bugs.webkit.org/show_bug.cgi?id=307500
Summary
[JSC] Fix RefCast / RefTest folding in B3
Yusuke Suzuki
Reported
2026-02-10 17:19:07 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2026-02-10 17:19:09 PST
<
rdar://problem/170086869
>
Yusuke Suzuki
Comment 2
2026-02-10 17:20:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58361
EWS
Comment 3
2026-02-10 19:47:58 PST
Committed
307226@main
(cea8513d43ef): <
https://commits.webkit.org/307226@main
> Reviewed commits have been landed. Closing PR #58361 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug