[JSC] Fix RefCast / RefTest folding in B3 https://bugs.webkit.org/show_bug.cgi?id=307500 rdar://170086869

Reviewed by Mark Lam and Keith Miller.

WasmRefTest / WasmRefCast's condition in B3 reduce strength is inversed,
which causes wrong cast success / failures. This patch fixes it.

Test: JSTests/wasm/stress/ref-cast-inverse.js

* JSTests/wasm/stress/ref-cast-inverse.js: Added.
(uleb128):
(sleb128):
(encodeSection):
(encodeString):
(buildModule.encodeBody):
(buildModule):
(main):
* Source/JavaScriptCore/b3/B3ReduceStrength.cpp:

Canonical link: https://commits.webkit.org/307226@main